--- a/site/index.html
+++ b/site/index.html
@@ -14,15 +14,14 @@
 </head>
 <body>
     <header>
-        <h2>W</h2>
+        <h2>WaterWorks</h2>
         <menu>
-            <li>HOME</li>
-            <li>SOBRE</li>
-            <li>PRODUTO</li>
-            <li>SIMULADOR</li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="#produto">PRODUTO</a></li>
+            <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
         </menu>
         <menu>
-            <li>LOGIN</li>
+            <li><a href="login.html">LOGIN</a></li>
             <li><b style="color: #0A8CBF;">CADASTRO</b></li>
         </menu>
     </header>
@@ -38,14 +37,15 @@
         <img src="../site/imgs - Home/imgBanner.png" alt="Imagem de uma pequena planta">
     </section>
     
-    <section class="arduino">
+    <section class="arduino" id="produto"> 
+        <br> <br>
         <h2>ESSE É O <b style="color: #0A8CBF;">FUTURO</b></h2>
         <div class="divArduino">
             <img src="../site/imgs - Home/logoProvisório.png" alt="Logo da Empresa">
-            <p>
-                Nós utilizaremos o arduino <br>
-                UNO e o sensor LDR para a <br>
-                captação de dados. Logo após <br>
+            <p> Nós utilizaremos o arduino <br>
+                UNO e o sensor de umidade (MTS) <br> 
+                também conhecido como Moisture Sensor <br> 
+                para a  captação de dados. Logo após <br>
                 iremos lançar esses dados <br>
                 no banco. E por último mas não <br>
                 menos importante, vamos usar <br>
@@ -74,22 +74,15 @@
     <section class="calculadora">
         <img src="../site/imgs - Home/calculadora.jpg" alt="imagem de uma calculadora">
         <p>
-            Lorem Ipsum is simply dummy text <br>
-            of the printing and typesetting <br>
-            industry. Lorem Ipsum has been the <br>
-            industry's standard dummy text <br>
-            ever since the 1500s, when an <br>
-            unknown printer took a galley of type <br>
-            and scrambled it to make a type <br>
-            specimen book. It has survived not <br>
-            only five centuries, but also the leap <br> 
-            into electronic typesetting, <br>
-            remaining essentially unchanged.
+            Conheça também o nosso <a href="calculadoraWaterWorksV3.html">Simulador Financeiro</a> <br>
+            podendo realizar simulações a respeito <br>
+            da quantidade de sensores você iria precisar <br>
+            no seu terreno, e saber a eficácia deles!!! <br>
         </p>
         <div>
-            <h2>L</h2>
-            <h2>D</h2>
-            <h2>R</h2>
+            <h2>M</h2>
+            <h2>T</h2>
+            <h2>S</h2>
         </div>
     </section>
 
