--- a/site/login.html
+++ b/site/login.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
+    <header>
+        <h2>WaterWorks</h2>
+        <menu>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
+        </menu>
+        <menu>
+            <li><a href="login.html">LOGIN</a></li>
+            <li><b style="color: #0A8CBF;">CADASTRO</b></li>
+        </menu>
+    </header>
     
     <main id="main_container">
         <div id="left_login">
