--- a/site/calculadoraWaterWorksV3.html
+++ b/site/calculadoraWaterWorksV3.html
@@ -10,11 +10,12 @@
     <h2>WaterWorks</h2>
     <menu>
         <li><a href="index.html">HOME</a></li>
+        <li>DASHBOARD</li>
         <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
     </menu>
     <menu>
         <li><a href="login.html">LOGIN</a></li>
-        <li><b style="color: #0A8CBF;">CADASTRO</b></li>
+        <li><b style="color: #0A8CBF;"><a href="tela_de_cadastro.html">CADASTRO</a></b></li>
     </menu>
 </header>
   <body>
