--- a/site/index.html
+++ b/site/index.html
@@ -18,11 +18,12 @@
         <menu>
             <li><a href="index.html">HOME</a></li>
             <li><a href="#produto">PRODUTO</a></li>
+            <li>DASHBOARD</li>
             <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
         </menu>
         <menu>
             <li><a href="login.html">LOGIN</a></li>
-            <li><b style="color: #0A8CBF;">CADASTRO</b></li>
+            <li><b style="color: #0A8CBF;"><a href="tela_de_cadastro.html">CADASTRO</a></b></li>
         </menu>
     </header>
 
