--- a/site/tela_de_cadastro.html
+++ b/site/tela_de_cadastro.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro</title>
 
-    <link rel="stylesheet" href="../Sprint 2/tela_cadastro.css">
+    <link rel="stylesheet" href="tela_cadastro.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
+    <header>
+        <h2>WaterWorks</h2>
+        <menu>
+            <li><a href="index.html">HOME</a></li>
+            <LI>DASHBOARD</LI>
+            <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
+        </menu>
+        <menu>
+            <li><a href="login.html">LOGIN</a></li>
+            <li><b style="color: #0A8CBF;"><a href="tela_de_cadastro.html">CADASTRO</a></b></li>
+        </menu>
+    </header>
+
     <main id="main_container">
         <div id="left_cadastro">
             <h1>Faça o seu Cadastro e inove <br> a sua empresa com  <br> a Water Works!</h1>
