--- a/site/calculadoraWaterWorksV3.html
+++ b/site/calculadoraWaterWorksV3.html
@@ -4,87 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de Sensores - Water Works</title>
-    <link rel="stylesheet" href="estiloCalculadora.css">
+    <link rel="stylesheet" href="estiloCalculadora.css" />
   </head>
   <header>
     <h2>WaterWorks</h2>
     <menu>
-        <li><a href="index.html">HOME</a></li>
-        <li>DASHBOARD</li>
-        <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
+      <li><a href="index.html">HOME</a></li>
+      <li>DASHBOARD</li>
+      <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
     </menu>
     <menu>
-        <li><a href="login.html">LOGIN</a></li>
-        <li><b style="color: #0A8CBF;"><a href="tela_de_cadastro.html">CADASTRO</a></b></li>
+      <li><a href="login.html">LOGIN</a></li>
+      <li>
+        <b style="color: #0a8cbf"
+          ><a href="tela_de_cadastro.html">CADASTRO</a></b
+        >
+      </li>
     </menu>
-</header>
+  </header>
   <body>
     <div class="lugar">
-    <div class="calculadora">
-      <h1>
-        Water Works<br />
-        Simule Aqui!
-      </h1>
+      <div class="calculadora">
+        <h1>Simule Aqui!</h1>
 
-      <p class="texto">
-        <strong>🌱 Transforme sua plantação de café com a Water Works!</strong>
-        🌱
-        <br />
-        Você sabia que a umidade do solo é crucial para uma colheita de café de
-        alta qualidade? Com o sistema de monitoramento de umidade da Water
-        Works, você pode otimizar a irrigação e aumentar a produtividade da sua
-        colheita como nunca antes!
-        <br />
-        💧 <strong>DUPLO BENEFÍCIO:</strong> Economize água e aumente a
-        eficiência.
-        <br />
-        💼<strong>PRODUTIVIDADE E QUALIDADE:</strong> Colheitas mais abundantes
-        e saudáveis.
-        <br />
-        💰<strong>LUCRO MAXIMIZADO:</strong> Calcule seu lucro estimado com
-        nossa calculadora!
-        <br />
-        <strong
-          >O QUE ESTA ESPERANDO? <br />
-          DESCUBRA AGORA MESMO!</strong
-        >
-        <br />
-        Quer saber quantos sensores você precisa para sua área de cultivo e qual
-        será o seu lucro estimado? Utilize nossa calculadora abaixo e veja como
-        a Water Works pode transformar sua plantação!
-      </p>
-      <div class="input-group">
-        <label for="area"
-          >Informe o tamanho de sua área de cultivo (cada hectare equivale à
-          10.000m²)(m²):</label
-        >
-        <input type="number" id="ipt_area" />
-        <label for="quilos">Informe o peso da colheita (Kg):</label>
-        <input type="number" id="ipt_quilos" />
-        <label for="preco"
-          >Informe o preço de venda por quilo (em média, o preço é cerca de R$
-          90,00 por quilo) (R$):</label
-        >
-        <input type="number" id="ipt_preco" />
+        <p class="texto">
+          Simule com a gente e veja como nossa solução pode transformar sua
+          produção!
+        </p>
+        <div class="input-group">
+          <label for="quilos"
+            >Informe o tamanho da sua área de cultivo em M²:</label
+          >
+          <input type="number" id="ipt_area" />
+          <label for="quilos">Informe o peso da colheita em Kg:</label>
+          <input type="number" id="ipt_quilos" />
+          <label for="preco"
+            >Informe o seu preço de venda por quilo em R$:</label
+          >
+          <input type="number" id="ipt_preco" />
+        </div>
+        <button onclick="calcular()">Resultado</button>
+        <div id="div_mensagem"></div>
       </div>
-      <button onclick="calcular()">Resultado</button>
-      <div id="div_mensagem"></div>
     </div>
-  </div>
     <script>
       function calcular() {
         var area = Number(ipt_area.value);
         var preco = Number(ipt_preco.value);
         var quilos = Number(ipt_quilos.value);
-        var alcanceSensor = 1000;
+        var lucro_sem_sistema = (preco * quilos * 80) / 100;
+        var lucro_com_sistema = preco * quilos;
+        var alcance_sensor = 1000;
+        var qtdsensor_pra_area = Math.ceil(area / alcance_sensor);
         if (area && quilos && preco) {
-          var sensoresNecessarios = Math.ceil(area / alcanceSensor);
-          var lucro = preco * quilos;
-          div_mensagem.innerHTML = `Será necessário o investimento em <strong>${sensoresNecessarios}</strong> sensores para garantir o monitoramento adequado da sua área de cultivo.
-          <br> 
-          Com o sistema de monitoramento Water Works, o lucro estimado é de <strong>R$ ${lucro.toFixed(
-            2
-          )}!!!</strong>.`;
+          div_mensagem.innerHTML = `
+          Para o monitoramento adequado da sua area de ${area} m², nós sugerimos a aquisição de ${qtdsensor_pra_area} sensores.
+          <br>
+          Atualmente, seu lucro esta sendo de R$ ${lucro_sem_sistema.toFixed(2)}
+          <br>
+          Com o sistema de monitoramento Water Works, o seu lucro é potencializado e pode chegar a <strong>R$${lucro_com_sistema.toFixed(2)}!!!</strong>.`;
           return;
         } else {
           div_mensagem.innerHTML =
