mini alterações no texto da calculadora

--- a/site/calculadoraWaterWorksV3.html
+++ b/site/calculadoraWaterWorksV3.html
@@ -32,15 +32,11 @@
           produção!
         </p>
         <div class="input-group">
-          <label for="quilos"
-            >Informe o tamanho da sua área de cultivo em M²:</label
-          >
+          <label>Informe o tamanho da sua área de cultivo em M²:</label>
           <input type="number" id="ipt_area" />
-          <label for="quilos">Informe o peso da colheita em Kg:</label>
+          <label>Informe o peso da colheita em Kg:</label>
           <input type="number" id="ipt_quilos" />
-          <label for="preco"
-            >Informe o seu preço de venda por quilo em R$:</label
-          >
+          <label>Informe o seu preço de venda por quilo em R$:</label>
           <input type="number" id="ipt_preco" />
         </div>
         <button onclick="calcular()">Resultado</button>
