adicionando codigo do arduino

--- a/site/calculadoraWaterWorksV3.html
+++ b/site/calculadoraWaterWorksV3.html
@@ -58,7 +58,9 @@
           <br>
           Atualmente, seu lucro esta sendo de R$ ${lucro_sem_sistema.toFixed(2)}
           <br>
-          Com o sistema de monitoramento Water Works, o seu lucro é potencializado e pode chegar a <strong>R$${lucro_com_sistema.toFixed(2)}!!!</strong>.`;
+          Com o sistema de monitoramento Water Works, o seu lucro é potencializado e pode chegar a <strong>R$${lucro_com_sistema.toFixed(
+            2
+          )}!!!</strong>.`;
           return;
         } else {
           div_mensagem.innerHTML =
