Ancoras do HTML página Home ajustadas

--- a/site/index.html
+++ b/site/index.html
@@ -57,7 +57,7 @@
                     os dados coletados para <br>
                     transformá-los em uma informação <br>
                     intuitiva para o usuario atraves <br>
-                    da nossa dashboard. <a href="https://www.google.com.br/"><b>Saiba mais</b></a>
+                    da nossa dashboard.
                 </p>
             </div>
             
@@ -69,7 +69,7 @@
 
     <section class="dashboard">
         <p>
-            Conheça nossa <a href="https://www.google.com.br/" style="font-weight: bold;">dashboard</a> <br>
+            Conheça nossa <a href="login.html" style="font-weight: bold;">dashboard</a> <br>
             aqui você vai receber <br>
             todas as informações <br>
             necessárias para o seu negócio <br>
