Alteração no logo

--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@
         <h2>ESSE É O <b style="color: #0A8CBF;">FUTURO</b></h2>
         <div class="divArduino">
             <div id="div_ard_img">
-                <img class="img_content" src="../site/imgs - Home/logoProvisório.png" alt="Logo da Empresa">
+                <img class="img_content" src="../site/imgs - Home/logoWW.png" alt="Logo da Empresa">
             </div>
             <div id="div_ard_text">
                 <p> Nós utilizaremos o arduino <br>
