Adição das fotos de alguns membros do grupo e modificação do carrossel com as fotos

--- a/site/index.html
+++ b/site/index.html
@@ -110,10 +110,10 @@
                 <button id="voltar">&lt;</button>
                 <ul>
                     <li><img src="https://i.pinimg.com/550x/0a/37/c0/0a37c072811e12a93e785c3a0aef820b.jpg" alt="" class="imgSlider on"></li>
-                    <li><img src="https://ironstudios.vtexassets.com/arquivos/ids/312467/264000_0.jpg?v=637954938683600000" alt="" class="imgSlider"></li>
-                    <li><img src="https://cdn.awsli.com.br/800x800/222/222813/produto/81836222/84af715426.jpg" alt="" class="imgSlider"></li>
-                    <li><img src="https://ironstudios.vtexassets.com/arquivos/ids/319124/264010_0.jpg?v=637955242549430000" alt="" class="imgSlider"></li>
-                    <li><img src="https://ironstudios.vtexassets.com/arquivos/ids/317508/264002_0.jpg?v=637955168711100000" alt="" class="imgSlider"></li>
+                    <li><img src="./imgs - Home/fotoGuilherme.jpeg" alt="" class="imgSlider"></li>
+                    <li><img src="./imgs - Home/fotoJulia.jpeg" alt="" class="imgSlider"></li>
+                    <li><img src="./imgs - Home/fotoAmoroso.jpeg" alt="" class="imgSlider"></li>
+                    <li><img src="./imgs - Home/fotoVlad.jpeg" alt="" class="imgSlider"></li>
                     <li><img src="https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2022/11/21/ranger-verde-1jia1s6qlwj09.jpg" alt="" class="imgSlider"></li>
                 </ul>
                 <button id="avancar">&gt;</button>
