--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
         </menu>
         <menu>
             <li><a href="login.html">LOGIN</a></li>
-            <li><b style="color: #0A8CBF;"><a href="tela_de_cadastro.html">CADASTRO</a></b></li>
+            <li><b style="color: #0A8CBF;"><a href="cadastro.html">CADASTRO</a></b></li>
         </menu>
     </header>
 
