--- a/site/index.html
+++ b/site/index.html
@@ -97,7 +97,7 @@
         <h2>QUEM É A <b style="color: #0A8CBF;">WATER WORKS?</b></h2>
         <div class="divQuemSomos">
             <p>
-                Nós da water works <br>
+                Nós da <b style="color: #0A8CBF;">Water Works</b> <br>
                 queremos juntar o <br>
                 melhor dos dois mundos <br>
                 tecnologia de ponta <br>
@@ -109,12 +109,12 @@
             <div class="slider">
                 <button id="voltar">&lt;</button>
                 <ul>
-                    <li><img src="https://i.pinimg.com/550x/0a/37/c0/0a37c072811e12a93e785c3a0aef820b.jpg" alt="" class="imgSlider on"></li>
+                    <li><img src="./imgs - Home/fotoAaron.jpeg" alt="" class="imgSlider on"></li>
                     <li><img src="./imgs - Home/fotoGuilherme.jpeg" alt="" class="imgSlider"></li>
                     <li><img src="./imgs - Home/fotoJulia.jpeg" alt="" class="imgSlider"></li>
                     <li><img src="./imgs - Home/fotoAmoroso.jpeg" alt="" class="imgSlider"></li>
                     <li><img src="./imgs - Home/fotoVlad.jpeg" alt="" class="imgSlider"></li>
-                    <li><img src="https://p2.trrsf.com.br/image/fget/cf/540/960/smart/images.terra.com/2022/11/21/ranger-verde-1jia1s6qlwj09.jpg" alt="" class="imgSlider"></li>
+                    <li><img src="./imgs - Home/fotoZaqueu.jpeg" alt="" class="imgSlider"></li>
                 </ul>
                 <button id="avancar">&gt;</button>
             </div>
