--- a/site/calculadoraWaterWorksV3.html
+++ b/site/calculadoraWaterWorksV3.html
@@ -16,7 +16,7 @@
       <li><a href="login.html">LOGIN</a></li>
       <li>
         <b style="color: #0a8cbf"
-          ><a href="tela_de_cadastro.html">CADASTRO</a></b
+          ><a href="cadastro.html">CADASTRO</a></b
         >
       </li>
     </menu>
