Adicionando o campo `código de identificação` no cadastro de empresa

--- a/site/cadastroEmpresa.html
+++ b/site/cadastroEmpresa.html
@@ -31,6 +31,10 @@
                     <span id="input_text">CNPJ</span><br />
                         <input type="text" id="input_cnpj" placeholder="CNPJ" oninput="validarCNPJ()"/><br />
                             <div class="mensagemErro" id="div_cnpj"></div>
+
+                    <span id="input_text">Código de identificação</span><br />
+                        <input type="text" id="input_codigo" placeholder="Código"   /><br />
+                            <div class="mensagemErro" id="div_cidade"></div>
         
                     <span id="input_text">CEP</span><br />
                         <input type="text" id="input_cep" placeholder="CEP" oninput="validarCEP()"/><br />
