Adicionando o campo de código de empresa na página de cadastro de funcionario e ajustando o css das páginas de cadastro

--- a/site/cadastroEmpresa.html
+++ b/site/cadastroEmpresa.html
@@ -32,9 +32,9 @@
                         <input type="text" id="input_cnpj" placeholder="CNPJ" oninput="validarCNPJ()"/><br />
                             <div class="mensagemErro" id="div_cnpj"></div>
 
-                    <span id="input_text">Código de identificação</span><br />
+                    <span id="input_text">Código de Identificação</span><br />
                         <input type="text" id="input_codigo" placeholder="Código"   /><br />
-                            <div class="mensagemErro" id="div_cidade"></div>
+                            <div class="mensagemErro" id="div_codigo"></div>
         
                     <span id="input_text">CEP</span><br />
                         <input type="text" id="input_cep" placeholder="CEP" oninput="validarCEP()"/><br />
