Organizando os arquivos (páginas e css) dos sites

--- a/site/pages/cadastroEmpresa.html
+++ b/site/pages/cadastroEmpresa.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro de Empresa</title>
 
-    <link rel="stylesheet" href="tela_cadastro.css">
+    <link rel="stylesheet" href="../css/tela_cadastro.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
     <main id="main_container">
         <div id="left_cadastro">
             <h1>Faça o seu Cadastro e inove <br> a sua empresa com  <br> a Water Works!</h1>
-            <img id="img_water_drop" src="../site/imagens/water-drop-animate.svg" alt="">
+            <img id="img_water_drop" src="../imagens/water-drop-animate.svg" alt="">
         </div>
 
     <div id="cadastro_right">
