--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WaterWorks</title>
-    <link rel="stylesheet" href="../site/estiloHome.css">
+    <link rel="stylesheet" href="./css/estiloHome.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -17,11 +17,11 @@
         <h2>WaterWorks</h2>
         <menu>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
+            <li><a href="./pages/calculadoraWaterWorksV3.html">SIMULADOR</a></li>
         </menu>
         <menu>
-            <li><a href="login.html">LOGIN</a></li>
-            <li><b style="color: #0A8CBF;"><a href="tela_de_cadastro.html">CADASTRO</a></b></li>
+            <li><a href="./pages/login.html">LOGIN</a></li>
+            <li><b style="color: #0A8CBF;"><a href="./pages/tela_de_cadastro.html">CADASTRO</a></b></li>
         </menu>
     </header>
 
