--- a/site/pages/calculadoraWaterWorksV3.html
+++ b/site/pages/calculadoraWaterWorksV3.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de Sensores - Water Works</title>
-    <link rel="stylesheet" href="estiloCalculadora.css" />
+    <link rel="stylesheet" href="../css/estiloCalculadora.css" />
   </head>
   <header>
     <h2>WaterWorks</h2>
     <menu>
-      <li><a href="index.html">HOME</a></li>
+      <li><a href="../index.html">HOME</a></li>
       <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
     </menu>
     <menu>
-      <li><a href="login.html">LOGIN</a></li>
+      <li><a href="./login.html">LOGIN</a></li>
       <li>
         <b style="color: #0a8cbf"
-          ><a href="cadastro.html">CADASTRO</a></b
+          ><a href="./tela_de_cadastro.html">CADASTRO</a></b
         >
       </li>
     </menu>
