Retirando a pasta public do WDV e fazendo algumas pequenas modificações no app e na página home

--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="right_banner">
-            <img src="../site/imgs - Home/imgBanner.png" alt="Imagem de uma pequena planta">
+            <img src="./imgs - Home/imgBanner.png" alt="Imagem de uma pequena planta">
         </div>
     </section>
     
@@ -44,7 +44,7 @@
         <h2>ESSE É O <b style="color: #0A8CBF;">FUTURO</b></h2>
         <div class="divArduino">
             <div id="div_ard_img">
-                <img class="img_content" src="../site/imgs - Home/logoWW.png" alt="Logo da Empresa">
+                <img class="img_content" src="./imgs - Home/logoWW.png" alt="Logo da Empresa">
             </div>
             <div id="div_ard_text">
                 <p> Nós utilizaremos o arduino <br>
@@ -75,11 +75,11 @@
             necessárias para o seu negócio <br>
             fluir como o planejado!
         </p>
-        <img class="img_content" src="../site/imgs - Home/Site Stats-bro.svg" alt="imagem de uma dashboard">
+        <img class="img_content" src="./imgs - Home/Site Stats-bro.svg" alt="imagem de uma dashboard">
     </section>
 
     <section class="calculadora">
-        <a href="calculadoraWaterWorksV3.html"><img class="img_content" src="../site/imgs - Home/Calculator-amico.svg" alt="imagem de uma calculadora">   </a>
+        <a href="calculadoraWaterWorksV3.html"><img class="img_content" src="./imgs - Home/Calculator-amico.svg" alt="imagem de uma calculadora">   </a>
         <p>
             Conheça também o nosso <a href="calculadoraWaterWorksV3.html"><b>Simulador Financeiro</b></a> <br>
             podendo realizar simulações a respeito <br>
@@ -131,9 +131,9 @@
         <menu class="contatos">
             <li>CONTATOS</li>
             <div>
-                <a href="https://www.google.com.br/"><img id="facebookLogo" src="../site/imgs - Home/facebook2.png" alt="Logo Facebook"></a>
-                <a href="https://www.google.com.br/"><img id="instagramLogo" src="../site/imgs - Home/Instagram_icon.png.webp" alt="Logo Instagram"></a>
-                <a href="https://www.google.com.br/"><img id="linkedinLogo" src="../site/imgs - Home/linkedin-icon.svg" alt="Logo LinkedIn"></a>
+                <a href="https://www.google.com.br/"><img id="facebookLogo" src="./imgs - Home/facebook2.png" alt="Logo Facebook"></a>
+                <a href="https://www.google.com.br/"><img id="instagramLogo" src="./imgs - Home/Instagram_icon.png.webp" alt="Logo Instagram"></a>
+                <a href="https://www.google.com.br/"><img id="linkedinLogo" src="./imgs - Home/linkedin-icon.svg" alt="Logo LinkedIn"></a>
             </div>
         </menu>
         <form class="duvidas">
