Primeira parte do home

--- a/site/pages/home.html
+++ b/site/pages/home.html
@@ -31,23 +31,17 @@
         </div>
     </header>
     <section class="banner">
-        <img src="../imagens/fruto.jpg" alt="">
-
-        <!-- <div class="container">
-            <div class="left_banner">
-                <div class="div_gg_banenr">
-                    <p>LAZER, <br> LONGEVIDADE <BR> E SEGURANÇA</p>
-                </div>
-                <div class="div_pp_banner">
-                    <p>A <span id="water_works_span">Water Works</span> é a empresa mais segura e rentável do mercado.</p>
-                </div>
-            </div> -->
-            <!-- <div class="right_banner">
-                <img src="./imgs - Home/fr" alt="Imagem de uma pequena planta">
-            </div> -->
+        <div class="fundo"></div>
+        <div class="titulo">
+            <div class="um">
+                <p>LAZER, LONGEVIDADE E SEGURANÇA</p>
+            </div>
+            <div class="dois">
+                <p>A <span>Water Works</span> é a empresa mais segura e rentável do mercado.</p>
+            </div>
         </div>
     </section>
-    <!-- <div class="arduino" id="produto">
+    <div class="arduino">
         <br> <br>
         <h2>ESSE É O <b style="color: #0A8CBF;">FUTURO</b></h2>
         <div class="divArduino">
@@ -68,7 +62,7 @@
                     da nossa dashboard.
                 </p>
             </div>
-        </div> -->
+        </div>
 </body>
 
 </html>
