criando sobre nós na página home

--- a/site/pages/home.html
+++ b/site/pages/home.html
@@ -41,7 +41,9 @@
             </div>
         </div>
     </section>
-    <div class="arduino">
+    <section class="sobreNos">
+    </section>
+    <!-- <div class="arduino">
         <br> <br>
         <h2>ESSE É O <b style="color: #0A8CBF;">FUTURO</b></h2>
         <div class="divArduino">
@@ -62,7 +64,7 @@
                     da nossa dashboard.
                 </p>
             </div>
-        </div>
+        </div> -->
 </body>
 
 </html>
