Site - Nossa tecnologia

--- a/site/pages/home.html
+++ b/site/pages/home.html
@@ -41,7 +41,41 @@
             </div>
         </div>
     </section>
-    <section class="sobreNos">
+    <section class="oQueE">
+        <div class="solo">
+            <div class="texto">
+                <h1>O QUE É O MONITORAMENTO DE UMIDADE DE SOLO?</h1>
+                <p>O monitoramento da umidade do solo é uma técnica que permite acompanhar em tempo real a quantidade de
+                    água presente no solo de uma plantação. Essa prática é essencial para agricultores, pois oferece
+                    informações precisas que ajudam a tomar decisões estratégicas sobre irrigação e manejo hídrico,
+                    otimizando o uso da água e promovendo o crescimento saudável das plantas.</p>
+            </div>
+            <div class="imagem"></div>
+        </div>
+        <div class="cafe">
+            <div class="texto">
+                <p> No caso de plantações como o café, o monitoramento da umidade do solo é ainda mais importante, já
+                    que a
+                    irrigação inadequada pode impactar diretamente a qualidade dos grãos e a produtividade da lavoura.
+                </p>
+            </div>
+            <div class="imagem"></div>
+        </div>
+    </section>
+    <section class="tecnologia">
+        <div class="texto">
+            <h1>NOSSA TECNOLOGIA</h1>
+            <p>Utilizamos tecnologias confiáveis e acessíveis para garantir precisão e eficiência:</p>
+            <ul>
+                <li>Arduino UNO e o Sensor de Umidade (MTS) para a captação de dados.</li>
+                <li>Lançamento dos dados coletados diretamente em um banco de dados seguro.</li>
+                <li>Transformação das informações em dados intuitivos e acessíveis através de nossa dashboard exclusiva.
+                </li>
+            </ul>
+        </div>
+        <img src="../imagens/sensor de umidade.png" alt="">
+        <img src="../imagens/armazenamento-de-banco-de-dados.png" alt="">
+        <img src="" alt="">
     </section>
     <!-- <div class="arduino">
         <br> <br>
